--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -1,21 +1,8 @@
 @import 'src/styles/partials/colors';
 @import 'src/styles/partials/mixins';
 
-@mixin overlay-btn {
-  height: 2rem;
-  width: 2rem;
-  background-color: rgba($white, 0.5);
-}
-
 .app {
-  display: block;
-  background-color: $black;
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
-  overflow-y: auto;
-
-  &Wrapper {
+  &Content {
     margin: 1rem;
     box-sizing: border-box;
     display: flex;
@@ -42,92 +29,49 @@
       }
     }
   }
+}
 
-  .overlay {
-    overflow-y: hidden;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background-color: rgba($white, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
+.scrollBtn,
+.scrollSpeed {
+  @include action-btn;
+  box-shadow: 0 0 10px rgba($black, 0.7);
+}
 
-    .mediaWrapper {
-      position: relative;
-    }
+.scrollBtn {
+  height: 3rem;
+  width: 3rem;
+  bottom: 1rem;
+  left: 1rem;
+}
 
-    .media {
-      max-width: 100vw;
-      max-height: 100vh;
-      position: relative;
-    }
+.scrollSpeed {
+  height: 202px;
+  width: 3rem;
+  bottom: 4.4rem;
+  left: 1rem;
+  transition: height 200ms ease-in;
+  cursor: default;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3rem;
+  overflow: hidden;
 
-    .closeBtn {
-      @include action-btn;
-      @include overlay-btn;
-      top: 1rem;
-      right: 1rem;
-    }
+  button {
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    color: $white;
+    text-transform: uppercase;
+    padding: 0.7rem;
 
-    .openNewTabBtn {
-      @include action-btn;
-      @include overlay-btn;
-      bottom: 1rem;
-      right: 1rem;
-    }
-  }
-
-  .scrollBtn,
-  .scrollSpeed {
-    @include action-btn;
-    background-color: $secondary-black;
-    box-shadow: 0 0 10px rgba($black, 0.7);
-
-    svg {
-      fill: rgba($white, 0.9);
+    &.active {
+      font-weight: 700;
     }
   }
 
-  .scrollBtn {
-    bottom: 1rem;
-    left: 1rem;
-    height: 3rem;
-    width: 3rem;
-  }
-
-  .scrollSpeed {
-    transition: height 200ms ease-in;
-    cursor: default;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    bottom: 4.4rem;
-    left: 1rem;
-    height: 202px;
-    border-radius: 3rem;
-    width: 3rem;
-    overflow: hidden;
-
-    button {
-      cursor: pointer;
-      background-color: transparent;
-      border: 0;
-      color: $white;
-      text-transform: uppercase;
-      padding: 0.7rem;
-
-      &.active {
-        font-weight: 700;
-      }
-    }
-
-    &Collapsed {
-      height: 0;
-    }
+  &Collapsed {
+    height: 0;
   }
 }
