--- a/src/components/MediaContainer/MediaContainer.module.scss
+++ b/src/components/MediaContainer/MediaContainer.module.scss
@@ -1,7 +1,11 @@
 .mediaContainer {
   .media {
     box-sizing: border-box;
-    max-width: calc(100vw / 4);
+    max-width: calc(100vw / 5);
+
+    @media only screen and (max-width: 2560px) {
+      max-width: calc(100vw / 4);
+    }
 
     @media only screen and (max-width: 1920px) {
       max-width: calc(100vw / 3);
@@ -11,7 +15,7 @@
       max-width: calc(100vw / 2);
     }
 
-    @media only screen and (max-width: 600px) {
+    @media only screen and (max-width: 640px) {
       max-width: calc(100vw / 1);
     }
   }
