--- a/src/components/AutoScrollMenu/AutoScrollMenu.module.scss
+++ b/src/components/AutoScrollMenu/AutoScrollMenu.module.scss
@@ -34,7 +34,7 @@
       border: 0;
       color: $white;
       text-transform: uppercase;
-      padding: 0.7rem;
+      padding: 0.35rem 0;
   
       &.active {
         font-weight: 700;
