Update with imported media folder selection and static menu bar at bottom for scroll speed and folder selection

--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -4,6 +4,7 @@
 .app {
   &Content {
     margin: 1rem;
+    margin-bottom: 46px;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
